# neic-finitefault

./: .dockerignore  .gitignore  .gitlab-ci.yml  .trivyignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  README.md  code.json  conda_install.sh  config.ini  docker_install.sh  install.sh  miniforge_install.sh  pb2002_boundaries.gmt  pyproject.toml  pytest.ini  user_install.sh
docs/: code-dependecies.md  code-dependencies.md  contributor-workflow.md  data-dependecies.md  manual-installation.md  neic-process.md
environment.d/: ubuntu.sh
examples/: WAFFLES_Tutorial.ipynb  WASP_Tutorial.ipynb  WISP_Tutorial.ipynb
examples/Multisegment_Example/: model_space.json  segments_data.json
fortran_code/: rename_files.py
fortran_code/bin_inversion_gfortran_f95/: Makefile  annealing.f95  annealing_static.f95  ffm_methods.f95  geodesics.f95  get_stations_data.f95  green_tele  green_tele.f  imagery_data.f95  insar_data.f95  misfit_eval.f95  model_parameters.f95  modelling_inputs.f95  rad_pattern.f95  random_gen.f95  regularization.f95  retrieve_gf.f95  retrieve_surf_gf.f95  rise_time.f95  run_forward  run_forward.f95  run_modelling  run_modelling.f95  save_forward.f95  static_data.f95  wavelet_param.f95  wavelets.f95
fortran_code/bin_str_f95/: .directory  fast_fourier_trans.f95  geodesics.f95  get_stations_data.f95  get_strong_motion  get_strong_motion.f95  model_parameters.f95  rad_pattern.f95  retrieve_gf.f95  store_gf.f95  vel_model_data.f95  wave_travel.f95
fortran_code/src_dc_f95/: bessel2.f95  cmodel_fk.f95  fk.f95  fk_kernel.f95  fk_openmp.f95  fk_source.f95  fk_st_kernel.f95  fk_static.f95  geodesics.f95  gf_static.f  gf_static.f95  gf_static2.f95  gf_static_f95  green_bank_fk.f95  green_bank_fk_openmp.f95  green_bank_openmp_f95  haskell.f95  prop.f95  radiation_sf.f95  retrieve_gf.f95  st_haskell.f95  st_kernel.f95  vel_model_data.f95  wave_travel.f95
install.d/: 1_ubuntu_packages.sh  2_gmt.sh  3_libgeos.sh  4_proj.sh  5_wasp.sh  conda.sh  data_dependencies.sh  edgecwb.sh  environment.yml  ff-env.sh  ffm.sh  gmt.sh  libgeos.sh  miniforge.sh  poetry.sh  proj.sh  ubuntu_packages.sh  wasp.sh
python_code/: data_management.py  data_processing.py  inversion_chen_new.py
src/ffm/: data_acquisition.py  data_management.py  data_processing.py  eventpage_downloads.py  fault_plane.py  get_outputs.py  green_functions.py  input_files.py  inversion_chen_new.py  lajolla_white.cpt  load_ffm_model.py  management.py  many_events.py  modelling_parameters.py  modify_jsons.py  modify_sacs.py  modulo_logs.py  multiple_solutions.py  plane_management.py  plot_Map.py  plot_graphic.py  plot_graphic_NEIC.py  plot_maps.py  plot_maps_NEIC.py  seismic_tensor.py  shakemap_polygon.py  shakemap_tools.py  shift_match.py  static2fsp.py  static2srf.py  traces_properties.py  velocity_models.py  wang_baseline_removal_v1.py  waveform_plots.py  waveform_plots_NEIC.py  write_KML.py
src/test/: STF.txt  data_acquisition_test.py  data_management_test.py  eventpage_downloads_test.py  fault_plane_test.py  get_outputs_test.py  green_function_test.py  input_files_test.py  inversion_chen_new_test.py  load_ffm_model_test.py  manage_parser_test.py  management_test.py  many_events_test.py  modelling_parameters_test.py  modify_jsons_test.py  modify_sacs_test.py  modulo_logs_test.py  multiple_solutions_test.py  plane_management_test.py  plot_Map_test.py  plot_graphic_NEIC_test.py  plot_graphic_test.py  plot_maps_NEIC_test.py  plot_maps_test.py  plots  remove_response_test.py  seismic_tensor_test.py  shakemap_polygon_test.py  shakemap_tools_test.py  shift_match_test.py  static2fsp_test.py  static2srf_test.py  test_read_config.py  testutils.py  traces_properties_test.py  velmodel_data.json  velocity_models_test.py  wang_baseline_removal_v1_test.py  wasp_admin_data_test.py  wasp_admin_manage_test.py  (+6 more)
src/wasp/: data_acquisition.py  data_management.py  data_processing.py  eventpage_downloads.py  fault_plane.py  get_outputs.py  green_functions.py  input_files.py  inversion_chen_new.py  load_ffm_model.py  manage_parser.py  management.py  many_events.py  modelling_parameters.py  modify_jsons.py  (+23 more)
(+327 files in other folders)
