[build-system]
requires = ["setuptools >= 72.2.0"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[project]
authors = [
  {name = "Pablo Koch",  email = "pkoch@csn.uchile.cl"}, 
  {name = "Dara Goldberg", email = "degoldberg@usgs.gov"},
  {name = "Heather Hunsinger", email = "hhunsinger@usgs.gov"},
  {name = "Kirstie Haynie", email = "khaynie@usgs.gov"}
]
maintainers = [
  {name = "Dara Goldberg", email = "degoldberg@usgs.gov"},
]
description = "Wavelet based inversion for slip on a fault, used to generate Finite Fault products"
keywords = ["usgs", "neic", "earthquake", "slip", "finitefault"]
license = {file = "LICENSE.md"}
name = "neic-finitefault"
requires-python = ">=3.10"
version = "1.0.0"

[project.urls]
Repository = "https://code.usgs.gov/ghsc/neic/algorithms/neic-finitefault"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
"wasp" = "wasp.wasp_admin.wasp:app"

[tool.poe.tasks]
lint = [
  { shell = "black --check src" },
  { shell = "isort --check src/wasp" },
  { shell = "mypy src/wasp" }
]
test = [
  { shell = "pytest src/test --cov=src/wasp" },
  { shell = "coverage xml" },
  { shell = "coverage html" }
]
end_to_end_test = [
  { shell = "safety check --ignore=51668" },
  { shell = "pytest src/test --cov=src/wasp" },
  { shell = "black --check src" },
  { shell = "isort --check src/wasp" },
  { shell = "mypy src/wasp" }
]

[tool.mypy]
plugins = numpy.typing.mypy_plugin


